fixed padding on slogan causing extra space

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -275,6 +275,7 @@ footer {
     padding-top: 1rem;
     padding-bottom: 1rem;
     font-size: 1rem;
+    padding: 1rem 0;
   }
 
 
